feat: add footer

--- a/sass/components/_contact-info.scss
+++ b/sass/components/_contact-info.scss
@@ -3,6 +3,9 @@
     flex-shrink: 1; 
     text-align: center; 
     background-color: $color-secondary;  
+    @include media-mobile {
+        flex-basis: 550px;  
+    }
  }
  
  .cover {
