--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,8 +8,11 @@
 @import "base/base";
 @import "base/photo";
 @import "base/icons";
+@import "base/logo";
 
 @import "layouts/main";
+@import "layouts/footer";
+@import "layouts/wrapper";
 
 @import "components/contact-info";
 @import "components/cover";
