--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -6,6 +6,7 @@ $color-link2: #1a44a0;
 $color-text: #544837;
 $color-text-light: #f8f8f8;
 $color-icon: #fafafa;
+$color-footer: #f2f5f5;
 
 $color-violet: #7752BE;
 $color-yellow: #FAB005;
@@ -13,6 +14,4 @@ $color-red: #F03E3D;
 $color-blue: #4DADF7;
 
 $content-width: 1000px;
-// $tablet-width: 768px;
-// $mobile-big-width: 414px;
-// $mobile-small-width: 320px;
+$mobile-width: 550px;
