--- a/sass/layouts/_main.scss
+++ b/sass/layouts/_main.scss
@@ -1,6 +1,8 @@
 .main {
-    max-width: $content-width;
-    margin: auto;
-    display: flex;
+   display: flex;
+   @include media-mobile {
+    flex-wrap: wrap;
+}
     
 }
+
